--- a/03-spring-boot-hibernate-jpa-crud/cruddemo/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/cruddemo/src/main/resources/application.properties
@@ -6,5 +6,13 @@ spring.datasource.password=Missing_Voyager#2441139qwert
 # Turn of spring boot banner
 spring.main.banner-mode=off
 
-#reduce logging level. set login to warn.
+# reduce logging level. set login to warn.
 logging.level.root=warn
+
+# add logging configs to display SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# configure JPA/Hibernate to auto create the tables
+# the "update" config will keep existing data in the table.
+spring.jpa.hibernate.ddl-auto=update
