--- a/04-spring-boot-rest-crud/02-spring-boot-rest-crud-employee/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/02-spring-boot-rest-crud-employee/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=cruddemo
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=root
+spring.datasource.password=Missing_Voyager#2441139qwert
