--- a/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-rest-jpa/src/main/resources/application.properties
+++ b/04-spring-boot-rest-crud/04-spring-boot-rest-crud-employee-with-spring-rest-jpa/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=cruddemo
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=root
 spring.datasource.password=Missing_Voyager#2441139qwert
+
+# spring data REST properties
+spring.data.rest.base-path=/magic-api
+spring.data.rest.default-page-size=3
