--- a/05-spring-boot-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
+++ b/05-spring-boot-rest-security/00-spring-boot-rest-security-employee-starter-code/src/main/resources/application.properties
@@ -2,5 +2,10 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=root
+spring.datasource.password=Missing_Voyager#2441139qwert
+
+
+# simple spring security
+spring.security.user.name=scott
+spring.security.user.password=test123
