--- a/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
+++ b/09-spring-boot-jpa-advanced-mappings/01-jpa-one-to-one-uni/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.main.banner-mode=off
 
 # Reduce logging level. set logging level to warn
 logging.level.root=warn
+
+# show JPA/Hibernate logging messages
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
