--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/application.properties
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=thymeleafdemo
 
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
+
+languages=C,C++,C#,Java,JavaScript,TypeScript,Python,Go,MySQL,Rust,Ruby,Kotlin,Swift,Dart
