updating check boxes read languages from application.properties

--- a/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/application.properties
+++ b/06-spring-boot-spring-mvc/01-thymeleaf-demo-helloworld/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=thymeleafdemo
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
 
 languages=C,C++,C#,Java,JavaScript,TypeScript,Python,Go,MySQL,Rust,Ruby,Kotlin,Swift,Dart
+
+systems=linux,macOS,Microsoft Windows, Android OS, iOS
